// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.99
  </h1>
  <Link
    replace={false}
    to="/create"
  >
    Add Expense
  </Link>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    9
     
    expenses
     totalling 
    $15,454.60
  </h1>
  <Link
    replace={false}
    to="/create"
  >
    Add Expense
  </Link>
</div>
`;
